# compugenesis

./: Cargo.toml  README.md
src/: archetype.rs  camera.rs  compute.rs  grid.rs  gui.rs  main.rs  node.rs  plant.rs  simulate.rs  vertex.rs
src/shader/: gridupdategrid.rs  gridupdatenode.rs  header.rs  mod.rs  nodeupdategrid.rs  nodeupdatenode.rs
