[package]
name = "compugenesis"
version = "0.1.0"
authors = ["pimpale <gpimpale29@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rand = "0.8.5"
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
cgmath = "0.18.0"
image = "0.24.5"
winit = "0.28.2"
time = "0.3.20"
csv = "1.2.1"
serde_json = "1.0.94"
serde = { version = "1.0.156", features = ["derive"] }
bytemuck = "1.13.1"
