[package]
name = "compugenesis"
version = "0.1.0"
authors = ["pimpale <gpimpale29@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rand = "0.8.5"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
cgmath = "0.18.0"
image = "0.24.6"
winit = "0.28.4"
time = "0.3.21"
csv = "1.2.1"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
bytemuck = "1.13.1"
