[package]
name = "compugenesis"
version = "0.1.0"
authors = ["pimpale <gpimpale29@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
rand = "0.8.5"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
vulkano-win = "0.34.0"
cgmath = "0.18.0"
image = "0.24.7"
winit = "0.28"
time = "0.3.30"
csv = "1.3.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
bytemuck = "1.14.0"
